--- a/Explore/vib_VCS_ForceUndoCheckOutOnUI1/.vib_ForceUndoCheckOut_mapping1.DTEMPLATE.json
+++ b/Explore/vib_VCS_ForceUndoCheckOutOnUI1/.vib_ForceUndoCheckOut_mapping1.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "3FOKMSSKkoNlbyoqOPCqYK",
+    "id" : "bO84gfPVhWqkQQwYbDlM8B",
     "name" : "vib_ForceUndoCheckOut_mapping1",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01001O17000000000OJP"
+        "repoHandle" : "01001O17000000000OJT"
       },
       "contextAttributes" : [ {
         "name" : "id",
