Automation summary for Force Undo Checkout testsOTVjMDMzNWMtNTFmNS00OG
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "0BdI10rRwqUdcmaxrb2NcC",
+    "id" : "77RQwoZisnpfaAigTDaJ6u",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
