Automation summary for Force Undo Checkout testsMGUzZTA3NTktYzQyZi00MD
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "77RQwoZisnpfaAigTDaJ6u",
+    "id" : "0X4K3JOlSHCjZVsXjp9niL",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
