Multi checkin assets
Description for Multi checkin assets

--- a/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
+++ b/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "6vRtG177Mlal4YRJTlmUK3",
+    "id" : "dDxKPNW3Tiwlcjq76Lftav",
     "name" : "VCS_DisableVersioningTest",
     "type" : "Project",
     "metadata" : {
