Automation summary for Force Undo Checkout testsM2ZhMTA4NGUtNjYxOC00M2
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "aoqcqygsMXNjzc47OtwaqT",
+    "id" : "8XlIfjeL81XbNmOe4Bshgf",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
