--- a/Explore/BulkUnlinkTestProj1/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj1/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "iAGl9LSqTmokLGKiygrU0o",
+    "id" : "88FygUUj8y6f7p8uHzH4Ib",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01001O17000000000OIH"
+        "repoHandle" : "01001O17000000000OLV"
       },
       "contextAttributes" : [ {
         "name" : "id",
