--- a/Explore/BulkUnlinkTestProj2/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj2/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "klxaEBKbH6ikRB5q4tp9uB",
+    "id" : "4JBTFisClSagzXAUE6Lhe7",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01001O17000000000OIK"
+        "repoHandle" : "01001O17000000000OLW"
       },
       "contextAttributes" : [ {
         "name" : "id",
