--- a/Explore/BulkUnlinkTestProj3/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj3/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "ajlUuEaNrSokbO87aQVEeW",
+    "id" : "2xVlTV8v3N0fhJ3vU16GSU",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01001O17000000000OIJ"
+        "repoHandle" : "01001O17000000000OLU"
       },
       "contextAttributes" : [ {
         "name" : "id",
