--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "9oCIqXQYt20fZ6Rgdf4509",
+    "id" : "0X4K3JOlSHCjZVsXjp9niL",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
